Fixed issue with overflow set on content

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -750,6 +750,11 @@ a.contentgroup__link {
 .widget.content {
 	padding: 0;
 	overflow: hidden;
+
+	#migrated & {
+		overflow: initial;
+	}
+	
 	button.btn {
 		.clearfix;
 	}
